force-app/main/default/objects/Bank_Account__c/fields/estimated_transfer_time__c.field-meta.xml
<CustomField>
    <fullName>estimated_transfer_time__c</fullName>
    <defaultValue>0</defaultValue>
    <label>estimated transfer time</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>