force-app/main/default/objects/Bank_Account__c/fields/For_Internal_Related_Account__c.field-meta.xml
<CustomField>
    <fullName>For_Internal_Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>For Internal Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bank Accounts (For Internal Related Account)</relationshipLabel>
    <relationshipName>For_Internal_Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>