force-app/main/default/objects/Bank_Account__c/fields/IBan__c.field-meta.xml
<CustomField>
    <fullName>IBan__c</fullName>
    <label>IBAN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>