force-app/main/default/objects/Bank_Account__c/fields/Incomlend_Account__c.field-meta.xml
<CustomField>
    <fullName>Incomlend_Account__c</fullName>
    <label>Ownership</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Incomlend</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>