force-app/main/default/objects/Bank_Account__c/fields/Latest_Balance__c.field-meta.xml
<CustomField>
    <fullName>Latest_Balance__c</fullName>
    <label>Latest Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>