force-app/main/default/objects/Bank_Account__c/fields/Latest_Balance_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Balance_Date__c</fullName>
    <label>Latest Balance Date</label>
    <summarizedField>Bank_Account_Balance__c.As_of_DateTime__c</summarizedField>
    <summaryForeignKey>Bank_Account_Balance__c.Bank_Account_Detail__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>