force-app/main/default/objects/Bank_Account__c/fields/onboarded__c.field-meta.xml
<CustomField>
    <fullName>onboarded__c</fullName>
    <formula>Account__r.onboarded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>onboarded</label>
    <type>Checkbox</type>
</CustomField>