force-app/main/default/objects/Bank_Account__c/fields/onboarding_stage__c.field-meta.xml
<CustomField>
    <fullName>onboarding_stage__c</fullName>
    <formula>text(Account__r.onboarding_stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>onboarding stage</label>
    <type>Text</type>
</CustomField>