force-app/main/default/objects/Bank_Account__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank Account for USD withdrawals</fullName>
            </value>
            <value>
                <fullName>Incomlend eWallet Account</fullName>
            </value>
            <value>
                <fullName>Incomlend incoming Obligor Funds Account</fullName>
            </value>
            <value>
                <fullName>Incomlend_incoming_Funder_Funds_Account</fullName>
                <label>Incomlend incoming Funder Funds Account</label>
            </value>
            <value>
                <fullName>Bank Account for SGD withdrawals</fullName>
            </value>
            <value>
                <fullName>Bank Account for HKD withdrawals</fullName>
            </value>
            <value>
                <fullName>Bank Account for GBP withdrawals</fullName>
            </value>
            <value>
                <fullName>Company operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>