force-app/main/default/objects/Bank_Account__c/fields/Total_Ewallet_Balances__c.field-meta.xml
<CustomField>
    <fullName>Total_Ewallet_Balances__c</fullName>
    <label>Total Ewallet Balances</label>
    <summarizedField>eWallet__c.Balance__c</summarizedField>
    <summaryForeignKey>eWallet__c.Bank_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>