force-app/main/default/objects/Bank_Account__c/fields/transfer_cutoff_time__c.field-meta.xml
<CustomField>
    <fullName>transfer_cutoff_time__c</fullName>
    <label>transfer cutoff time</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>