force-app/main/default/objects/Bank_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Bank_Account_Number__c</columns>
    <columns>NAME</columns>
    <columns>Purpose__c</columns>
    <columns>Beneficiary_Name__c</columns>
    <columns>Currency__c</columns>
    <columns>Account__c</columns>
    <columns>onboarding_stage__c</columns>
    <columns>SWIFT_Code__c</columns>
    <columns>estimated_transfer_time__c</columns>
    <columns>Address__c</columns>
    <columns>Active__c</columns>
    <columns>Bank_Name__c</columns>
    <columns>Country__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>