force-app/main/default/objects/Bank_Account__c/listViews/onboarded_funders2.listView-meta.xml
<ListView>
    <fullName>onboarded_funders2</fullName>
    <columns>Incomlend_Account__c</columns>
    <columns>Account__c</columns>
    <columns>Bank_Account_Number__c</columns>
    <columns>NAME</columns>
    <columns>Beneficiary_Name__c</columns>
    <columns>Currency__c</columns>
    <columns>onboarding_stage__c</columns>
    <columns>SWIFT_Code__c</columns>
    <columns>estimated_transfer_time__c</columns>
    <columns>Address__c</columns>
    <columns>Active__c</columns>
    <columns>Bank_Name__c</columns>
    <columns>Country__c</columns>
    <columns>Latest_Balance__c</columns>
    <columns>Latest_Balance_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>onboarded__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Account_Type__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <filters>
        <field>Account_Sub_Type__c</field>
        <operation>equals</operation>
        <value>Purchaser</value>
    </filters>
    <label>onboarded - funders</label>
</ListView>